2.19.7:

2010-03-17  Murray Cumming  <murrayc@murrayc.com>

	* gdk/src/screen.hg: Added get_primary_monitor().

2010-03-17  Murray Cumming  <murrayc@murrayc.com>

    Added some methods.

	* gdk/src/gdk_pixbuf.defs: Regenerated and moved to gdk_pixbuf_methods.defs.
    * gdk/src/filelist.am:
    * gdk/src/gdk.defs: Updated appropriately.
    * gdk/src/gdk_methods.defs: Regenerated with h2defs.py.
    * gdk/src/window.hg: Added flush().
    * gtk/src/statusbar.hg: Added get_message_area().
    * gtk/src/toolitem.hg: Added get_ellipsize_mode().
    * gtk/src/toolitemgroup.hg: Added get_label_widget().

2010-03-16  Murray Cumming  <murrayc@murrayc.com>

	ToolItem, ToolShell: Wrapped new C functions.

	* gtk/src/toolitem.hg: Added  get_text_alignment(), get_text_orientation(),
    get_text_size_group().
	* gtk/src/toolshell.hg: Added  get_text_orientation(), get_text_alignment(), 
    get_ellipsize_mode(), get_text_size_group()
    * tools/m4/convert_gtk.m4: Added SizeGroup conversions.

2010-03-16  Murray Cumming  <murrayc@murrayc.com>

    Fix the build with -DGSEAL_ENABLE.

	* configure.ac: Add -DGSEAL_ENABLE to the fatal warnings.
	* gtk/gtkmm/radiobuttongroup.cc:
	* gtk/src/bin.[hg|ccg]:
	* gtk/src/box.[hg|ccg]:
	* gtk/src/buttonbox.ccg:
	* gtk/src/buttonbox.hg:
	* gtk/src/colorselection.[hg|ccg]:
	* gtk/src/fontselection.hg:
	* gtk/src/handlebox.[hg|ccg]:
	* gtk/src/inputdialog.hg:
	* gtk/src/menushell.hg:
	* gtk/src/messagedialog.ccg:
	* gtk/src/notebook.hg:
	* gtk/src/ruler.[hg|ccg]:
	* gtk/src/scrolledwindow.hg:
	* gtk/src/selectiondata.ccg:
	* gtk/src/table.hg:
	* gtk/src/tearoffmenuitem.hg:
	* gtk/src/textview.hg:
	* gtk/src/widget.[hg|ccg]: Replace uses of GSEAL()ed struct fields where 
    possible by using new C functions. But some have no replacement so 
    we must undef GSEAL_ENABLE in the .cpp file to keep our now-deprecated API.

	* gtk/src/printer.hg: Add get_hard_margins().
	* gtk/src/viewport.hg: Added get_bin_window().