@@ -1,3 +1,13 @@
+2010-03-18  Murray Cumming  <murrayc@murrayc.com>
+
+    Demo: Fix use of deprecated API.
+
+	* configure.ac: Add PANGOMM to the list of deprecations to check for.
+	* demos/Makefile.am: Add GTKMM's own deprecation defines so we don't ever use 
+    deprecated API in this code.
+	* demos/gtk-demo/example_colorsel.cc:
+	* demos/gtk-demo/example_uimanager.cc: Correct use of deprecated API.
+
 2.19.7:
 
 2010-03-17  Murray Cumming  <murrayc@murrayc.com>
